Thu Jun  7 13:52:20 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (setVariables): Extend the handling of
	build_select_lists to handle select multiple, radio buttons and
	checkboxes.
	* htdoc/attrs.html, htdoc/hts_selectors.html: Describe this.

Thu Jun  7 13:40:13 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/Exact.cc (Exact), htfuzzy/Prefix.cc (Prefix): Set the
	name field to the class name, as suggested by Jesse.

Thu Jun  7 13:27:35 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/htdig-3.1.6.spec, contrib/htdig-3.1.6-conf.patch,
	htdoc/where.html, .version, README: Bump to version 3.1.6.

Thu Jun  7 11:58:28 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/multidig/*: Backport from 3.2.0b3, including fixes below.

        * contrib/multidig/Makefile, gen-collect, db.conf, multidig.conf:
        Add missing trailing newlines as pointed out by Doug Moran
        <dmoran@dougmoran.com>.

        * contrib/multidig/Makefile (install): Make sure scripts have a+x
        permissions. Pointed out by Doug Moran.

        * contrib/multidig/new-collect: Fix typo to ensure MULTIDIG_CONF
        is set correctly.

Thu Jun  7 11:37:52 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/README: Add in descriptions for web site contrib directory,
	acroconv.pl & conv_doc.pl.
	* contrib/examples/rundig.sh: Update to most recent version for 3.1.x.
	* contrib/htparsedoc/htparsedoc: Add in contributed bug fixes from
	Andrew Bishop to work on SunOS 4.x machines.
	* contrib/acroconv.pl: Added external converter script to convert
	PDFs with acroread.

Thu Jun  7 10:41:05 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/ParsedString.cc (get), htsearch/Display.cc (expandVariables):
	Use isalnum() instead of isalpha() to allow digits in attribute and
	variable names, allow '-' in variable names too for consistency.
