@@ -1,3 +1,8 @@
+Thu Jun  7 13:57:06 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdig/Retriever.cc (GetLocal, GetLocalUser): Fix to allow compiling
+	on AIX & other non-GNU compilers.
+
 Thu Jun  7 13:52:20 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htsearch/Display.cc (setVariables): Extend the handling of
